# hyperion

./: .coderabbit.yaml  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  barcode-generator.html  bos_copilot.py  bos_driver.py  bos_explore.py  readme.html  scan-feature-guide.html  scan-feature-prereqs.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
hyperion/: .gitignore  README.md  index.html  package-lock.json  package.json
hyperion/docs/artifacts/: callout.html  comparison-table.html  faq.html  index.html  metric-tiles.html  playbook.html  progress-dashboard.html  term-card.html
hyperion/docs/wiki/: agent.html  code-standard.html  context.html  index.html  memory.html  plan.html  project-store.html  roster.html  vault.html
hyperion/src/: main.ts  styles.css
hyperion/src-tauri/: Cargo.toml  tauri.conf.json
hyperion/src-tauri/src/: agent.rs  artifacts.rs  bosparse.rs  collab.rs  crawler.rs  diff.rs  embed.rs  entra.rs  export.rs  ingest.rs  lib.rs  milesight.rs  netreg.rs  playbook.rs  projects.rs  roster.rs  security.rs  standard.rs  suggest.rs  tooling.rs  vault.rs
playbooks/: _SCHEMA.json  box-scan-verify.json  replace-takstatus-mock.json  stop-takpump-on-leak.json  verify-takpump.json
