[package]
name = "hyperion"
version = "1.0.0"
description = "Hyperion — enterprise IoT workbench for ComfortClick bOS"
authors = ["Lucas Strand"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyperion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
# `preserve_order` keeps JSON object member order = insertion order, so the
# pure-Rust .bos parser (src/bosparse.rs) reproduces Python dict ordering
# (binding/ref ordering and settings/values key order depend on it).
serde_json = { version = "1", features = ["preserve_order"] }
# Bundled SQLite (compiled from source) — the per-project store. No system lib needed.
rusqlite = { version = "0.32", features = ["bundled"] }
# Encrypted vault (Phase 1, M6): AES-256-GCM at rest, data-encryption key in the
# OS keychain. `windows-native` is the only backend enabled for the current build
# target; add `apple-native` / `sync-secret-service` when building for macOS/Linux.
aes-gcm = "0.10"
keyring = { version = "3", features = ["windows-native"] }
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
# Microsoft Entra SSO (Phase 1 step 2): OAuth 2.0 auth-code + PKCE. `ureq` is a
# small blocking HTTPS client (rustls) for the token exchange; `sha2` computes
# the PKCE S256 challenge; `urlencoding` builds the authorize URL safely.
ureq = "2"
sha2 = "0.10"
urlencoding = "2"
pdf-extract = "0.12.0"
quick-xml = "0.40.1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

